--- a/project-files/src/glade/window_main.glade
+++ b/project-files/src/glade/window_main.glade
@@ -359,7 +359,6 @@
                                   <object class="GtkComboBox" id="cb_brush">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="focus_on_click">False</property>
                                     <property name="model">liststore2</property>
                                     <property name="active">0</property>
                                     <signal name="changed" handler="on_cb_brush_changed" swapped="no"/>
@@ -380,7 +379,6 @@
                                   <object class="GtkComboBox" id="cb_thickness">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="focus_on_click">False</property>
                                     <property name="model">liststore1</property>
                                     <property name="active">0</property>
                                     <signal name="changed" handler="on_cb_thickness_changed" swapped="no"/>
@@ -1527,7 +1525,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton">
+                          <object class="GtkButton" id="btn_fill">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -1537,6 +1535,8 @@
                             <property name="relief">none</property>
                             <property name="xalign">0.5</property>
                             <property name="image_position">top</property>
+                            <signal name="focus-in-event" handler="on_btn_fill_focus_in_event" swapped="no"/>
+                            <signal name="focus-out-event" handler="on_btn_fill_focus_out_event" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
