--- a/project-files/src/glade/window_main.glade
+++ b/project-files/src/glade/window_main.glade
@@ -143,6 +143,7 @@
     <property name="window_position">center-always</property>
     <property name="default_width">1600</property>
     <property name="default_height">900</property>
+    <property name="icon">resources/logos/nebula-logo.png</property>
     <property name="show_menubar">False</property>
     <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
     <child type="titlebar">
