Interface: undo implemented

--- a/project-files/src/glade/window_main.glade
+++ b/project-files/src/glade/window_main.glade
@@ -80,6 +80,9 @@
       <row>
         <col id="0" translatable="yes">Marker</col>
       </row>
+      <row>
+        <col id="0" translatable="yes">Spray</col>
+      </row>
     </data>
   </object>
   <object class="GtkImage" id="logo">
@@ -1675,7 +1678,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton">
+                          <object class="GtkButton" id="btn_erase">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
@@ -1685,6 +1688,8 @@
                             <property name="relief">none</property>
                             <property name="xalign">0.5</property>
                             <property name="image_position">top</property>
+                            <signal name="focus-in-event" handler="on_btn_erase_focus_in_event" swapped="no"/>
+                            <signal name="focus-out-event" handler="on_btn_erase_focus_out_event" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
