--- a/project-files/src/glade/window_main.glade
+++ b/project-files/src/glade/window_main.glade
@@ -103,6 +103,12 @@
     <property name="pixel_size">25</property>
     <property name="icon_name">shapes</property>
   </object>
+  <object class="GtkImage" id="logo3">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixel_size">25</property>
+    <property name="icon_name">tool_eraser</property>
+  </object>
   <object class="GtkImage" id="logo4">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -120,6 +126,11 @@
     <property name="can_focus">False</property>
     <property name="pixel_size">25</property>
     <property name="icon_name">tool_flood_fill</property>
+  </object>
+  <object class="GtkImage" id="logo7">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="icon_name">tool_color_eraser</property>
   </object>
   <object class="GtkAdjustment" id="noise_adj">
     <property name="upper">100</property>
@@ -1238,7 +1249,7 @@
                                                     <property name="valign">start</property>
                                                     <property name="orientation">vertical</property>
                                                     <child>
-                                                      <object class="GtkImage">
+                                                      <object class="GtkImage" id="prev_vogue">
                                                         <property name="width_request">160</property>
                                                         <property name="height_request">100</property>
                                                         <property name="visible">True</property>
@@ -1252,12 +1263,13 @@
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <object class="GtkCheckButton">
-                                                        <property name="label" translatable="yes">Filter 5</property>
+                                                      <object class="GtkCheckButton" id="check_vogue">
+                                                        <property name="label" translatable="yes">Vogue</property>
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
                                                         <property name="receives_default">False</property>
                                                         <property name="draw_indicator">True</property>
+                                                        <signal name="toggled" handler="on_check_vogue_toggled" swapped="no"/>
                                                       </object>
                                                       <packing>
                                                         <property name="expand">False</property>
@@ -1675,6 +1687,26 @@
                             <property name="expand">False</property>
                             <property name="fill">True</property>
                             <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="btn_wipe">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="halign">start</property>
+                            <property name="valign">start</property>
+                            <property name="image">logo7</property>
+                            <property name="relief">none</property>
+                            <property name="xalign">0.5</property>
+                            <property name="image_position">top</property>
+                            <signal name="focus-in-event" handler="on_btn_wipe_focus_in_event" swapped="no"/>
+                            <signal name="focus-in-event" handler="on_btn_wipe_focus_in_event" swapped="no"/>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                         <child>
