--- a/project-files/src/glade/window_main.glade
+++ b/project-files/src/glade/window_main.glade
@@ -1285,7 +1285,7 @@
                                                     <property name="valign">start</property>
                                                     <property name="orientation">vertical</property>
                                                     <child>
-                                                      <object class="GtkImage">
+                                                      <object class="GtkImage" id="prev_timeoclockfilter">
                                                         <property name="width_request">160</property>
                                                         <property name="height_request">100</property>
                                                         <property name="visible">True</property>
@@ -1299,12 +1299,13 @@
                                                       </packing>
                                                     </child>
                                                     <child>
-                                                      <object class="GtkCheckButton">
-                                                        <property name="label" translatable="yes">Filter 7</property>
+                                                      <object class="GtkCheckButton" id="check_timeoclockfilter">
+                                                        <property name="label" translatable="yes">Time O'Clock</property>
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">True</property>
                                                         <property name="receives_default">False</property>
                                                         <property name="draw_indicator">True</property>
+                                                        <signal name="toggled" handler="on_check_timeoclock_toggled" swapped="no"/>
                                                       </object>
                                                       <packing>
                                                         <property name="expand">False</property>
